--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "a3FatalCodes",
-  "version": "0.1.0",
-  "description": "WPI CS4241-C25 Assignment A2",
+  "name": "todo-app",
+  "version": "1.0.0",
+  "description": "WPI CS4241-C25 Assignment A4",
   "author": "Matthew Brown",
   "scripts": {
     "start": "node server.js",
+    "build": "cd client && npm install && npm run build",
+    "postinstall": "npm run build",
     "test": "cross-env LIGHTHOUSE_MODE=true node server.js"
   },
   "dependencies": {
@@ -19,14 +21,14 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mime": "^2.4.4",
     "mongodb": "^6.13.0",
-    "mongoose": "^8.10.0",
-    "passport": "^0.7.0",
+    "mongoose": "^7.0.3",
+    "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
@@ -34,7 +36,7 @@
     "react-router-dom": "^7.1.5"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16.0.0"
   },
   "main": "server.js",
   "license": "ISC",
