More glitch updates

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MONGODB_URI=mongodb+srv://dbUser:dbUserPassword@cluster0.rigtk.mongodb.net/
 GITHUB_CLIENT_ID=Ov23liEQjru7XJXkTP6O
 GITHUB_CLIENT_SECRET=b337482841a34a49256eba58b10399cc0f1ed715
-SESSION_SECRET=a4_todo_app_secret_key_2024
+SESSION_SECRET=a4_todo_app_secret_key_2025
 NODE_ENV=production
 CLIENT_URL=https://a4-fatalcodes.glitch.me
+BASE_URL=https://a4-fatalcodes.glitch.me
