--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Matthew Brown",
   "scripts": {
     "start": "node server.js",
-    "build": "cd client && npm install && npm run build",
+    "build": "cd client && npm install --legacy-peer-deps && npm run build",
     "postinstall": "npm run build"
   },
   "dependencies": {
@@ -16,7 +16,9 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.0.3",
     "passport": "^0.6.0",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "mime": "^3.0.0",
+    "send": "^0.18.0"
   },
   "engines": {
     "node": ">=16.0.0"
