--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "todo-app",
   "version": "1.0.0",
   "description": "WPI CS4241-C25 Assignment A4",
-  "author": "Matthew Brown",
   "scripts": {
     "start": "node server.js",
-    "build": "cd client && npm install --legacy-peer-deps && npm run build",
+    "build": "cd client && npm install && npm run build",
     "postinstall": "npm run build"
   },
   "dependencies": {
@@ -16,17 +15,9 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.0.3",
     "passport": "^0.6.0",
-    "passport-github2": "^0.1.12",
-    "mime": "^3.0.0",
-    "send": "^0.18.0"
+    "passport-github2": "^0.1.12"
   },
   "engines": {
     "node": ">=16.0.0"
-  },
-  "main": "server.js",
-  "license": "ISC",
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "tailwindcss": "^4.0.6"
   }
 }
