--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "WPI CS4241-C25 Assignment A4",
   "scripts": {
     "start": "node server.js",
-    "build": "cd client && npm install && npm run build",
+    "build": "cd client && npm install --legacy-peer-deps && npm run build",
     "postinstall": "npm run build"
   },
   "dependencies": {
