--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mime": "^2.4.4",
-    "mongoose": "^7.0.3",
+    "mongodb": "^5.1.0",
+    "mongoose": "^6.10.0",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "16.x"
   }
 }
