--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "connect-mongo": "^5.1.0",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mime": "^2.4.4",
-    "mongodb": "^5.1.0",
-    "mongoose": "^6.10.0",
+    "mongodb": "^4.12.0",
+    "mongoose": "^6.7.3",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12"
   },
