--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "cross-env LIGHTHOUSE_MODE=true node server.js",
-    "build": "cd client && npm install && npm run build",
+    "build": "cd client && npm install --include=dev && npm run build",
     "deploy": "npm install && npm run build"
   },
   "dependencies": {
