updated for Render

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ GITHUB_CLIENT_SECRET=b337482841a34a49256eba58b10399cc0f1ed715
 SESSION_SECRET=your_session_secret
 CLIENT_URL=https://a4-fatalcodes.onrender.com
 NODE_ENV=production
+PORT=10000
